cics emulator support

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ temp/
 .vscode/
 converted/*.txt
 src/scratch.py
+src/HELLOWO1.py
+src/HELLOW12.py
+src/cobol_variable.py
+src/test-records.txt
+*.config
