--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,15 @@ copybooks/MNUCPY.CPY
 copybooks/ERR020W.CPY
 copybooks/DATEAREA.CPY
 copybooks/CABCHCPC.CPY
+copybooks/CABCBEHV.CPY
+copybooks/CABCHIVS.CPY
+copybooks/ELGCHMO.CPY
+copybooks/CABCBDED.CPY
+copybooks/CABCHCVS.CPY
+copybooks/CABCHOEP.CPY
+copybooks/CABEHTMN.CPY
+copybooks/CIBCINTF.CPY
+copybooks/CIOCPARM.CPY
+copybooks/CABCALIN.CPY
+copybooks/CABCBOI.CPY
+copybooks/CABCMDPP.CPY
