--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ hw_basic_out.txt
 TEST/
 JES/
 JES2/
+copybooks/*_copybook.txt
 copybooks/CABCABST.CPY
 copybooks/MNUCPY.CPY
 copybooks/ERR020W.CPY
