--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,17 @@ copybooks/CIOCPARM.CPY
 copybooks/CABCALIN.CPY
 copybooks/CABCBOI.CPY
 copybooks/CABCMDPP.CPY
+copybooks/CABCDEPO.CPY
+copybooks/CABCSMOK.CPY
+copybooks/CIOCCNCR.CPY
+copybooks/CABCACUP.CPY
+copybooks/CABCHHEH.CPY
+copybooks/CABCHPCC.CPY
+copybooks/CABCINCR.CPY
+copybooks/CABCPBRO.CPY
+copybooks/CABCPPVS.CPY
+copybooks/CABCREHB.CPY
+copybooks/CABCSTIS.CPY
+copybooks/CABCTELH.CPY
+copybooks/CIOCBENE.CPY
+copybooks/CIOCSPLL.CPY
