--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,8 @@ copybooks/CIOCSPLL.CPY
 copybooks/CABESPLL.CPY
 copybooks/CABCESRD.CPY
 copybooks/CIOCHMO.CPY
+copybooks/CABEMBD.CPY
+copybooks/CABCXREF.CPY
+copybooks/CABCREPP.CPY
+copybooks/CABCMSP.CPY
+copybooks/CABCHSPM.CPY
