--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ test-records-indexed.txt.dat
 test-records-indexed.txt.idx
 test-records.txt
 hw_basic_out.txt
+pre_processed.cbl
 TEST/
 JES/
 JES2/
